Update and rename clock.html to clock1.html

--- a/views/clock1.html
+++ b/views/clock1.html
@@ -65,6 +65,11 @@
 			font-size: 6vmin;
 			display: none;
 		}
+		#statusPills{
+			flex-grow: 1;
+			font-size: 6vmin;
+			display: none;
+		}
 	</style>
 </head>
 
@@ -73,6 +78,7 @@
 	<main>
 		<div class="inner">
 			<div id="bgnow"></div>
+			<div class="statusPills">
 			<div id="trend">
 				<div id="staleTime"></div>
 			</div>
